--- a/episodes/differential-expression-analysis.Rmd
+++ b/episodes/differential-expression-analysis.Rmd
@@ -25,6 +25,13 @@ exercises: 10
 
 ```{r, echo=FALSE}
 install.packages("BiocManager")
+BiocManager::install("clusterProfiler")
+BiocManager::install("DESeq2")
+BiocManager::install("AnnotationDbi")
+BiocManager::install("org.Mm.eg.db")
+BiocManager::install("org.Hs.eg.db")
+BiocManager::install("GO.db")
+BiocManager::install("EnhancedVolcano")
 suppressPackageStartupMessages(library("BiocManager"))
 suppressPackageStartupMessages(library("clusterProfiler"))
 suppressPackageStartupMessages(library("DESeq2"))
