--- a/episodes/mouse-human-alignment.Rmd
+++ b/episodes/mouse-human-alignment.Rmd
@@ -24,17 +24,17 @@ exercises: 40
 Author Gregory Cary, Jackson Laboratory
 
 ```{r libs, warning=FALSE, include=FALSE}
-#suppressPackageStartupMessages(library("DESeq2"))
+suppressPackageStartupMessages(library("DESeq2"))
 suppressPackageStartupMessages(library("ggplot2"))
-#suppressPackageStartupMessages(library("AnnotationDbi"))
-#suppressPackageStartupMessages(library("org.Mm.eg.db"))
-#suppressPackageStartupMessages(library("org.Hs.eg.db"))
-#suppressPackageStartupMessages(library("GO.db"))
-#suppressPackageStartupMessages(library("EnhancedVolcano"))
-#suppressPackageStartupMessages(library("cowplot"))
+suppressPackageStartupMessages(library("AnnotationDbi"))
+suppressPackageStartupMessages(library("org.Mm.eg.db"))
+suppressPackageStartupMessages(library("org.Hs.eg.db"))
+suppressPackageStartupMessages(library("GO.db"))
+suppressPackageStartupMessages(library("EnhancedVolcano"))
+suppressPackageStartupMessages(library("cowplot"))
 suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(dplyr))
-#suppressPackageStartupMessages(library(clusterProfiler))
+suppressPackageStartupMessages(library(clusterProfiler))
 suppressPackageStartupMessages(library(data.table))
 #suppressPackageStartupMessages(library(synapser))
 #synLogin(silent=TRUE)
