--- a/episodes/exploring-data-in-synapse.Rmd
+++ b/episodes/exploring-data-in-synapse.Rmd
@@ -23,6 +23,9 @@ exercises: 10
 suppressPackageStartupMessages(library(dplyr))
 suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(knitr))
+if (!require("BiocManager", quietly = TRUE))
+    install.packages("BiocManager")
+BiocManager::install(version = "3.20")
 ```
 
 ## Working with AD Portal metadata 
